Change Log

perdition
Mail retrieval proxy server
Copyright (C) 1999-2003  Horms <horms@verge.net.au>
----------------------------------------------------------------------

18th April 2003
(Horms)
   * 1.11beta8
   - Fixed capability command for POP3S
   - Minor updates to databse documentation for MySQL and ODBC
   - Flags should now work correcly in the debian init script.
     Kilian Cavalott
   - Fixed segmentation fault when using the query_key option
     with end-users whose usernames are more than 32 characters long.
   - Fixed parsing of LDAP URLs so that non %s format elements are
     ignored. Perviously they caused the URL to be treated as invalid.
   - Fixed ODBC module so that it should no longer segmentation fault
     when trying to do a query.
   - Don't check for symbols in libdb.a at configure time,
     the symbols seem to be different between versions of libdb.a.

----------------------------------------------------------------------

26th March 2003
(Horms)
   * 1.11beta7
   - Cleaned up imap4_write to not used returned local variables.
   - Show version when logging options
   - format string corretly handles username and domain when
     no domain_delimter is supplied by the end-user. Evan Moore.
   - Logger is reoppened on SIGHUP. This is particularly useful
     perdition is logging to a file.
   - Compliation of each database library may be disabled 
     using configure
   - Fixed minor SSL include path problem. Bo Bendtsen
   - Fixed minor documentation error in SSL crt and key files

----------------------------------------------------------------------

12th February 2003
(Horms)
   * 1.11beta5
   - Return correct tag for server_ok_line
     broke somewhere in the 1.11beta series

----------------------------------------------------------------------

7th February 2003
(Horms)
   * 1.11beta4
   - Updated configure.in's download references
   - Fixed bug in server_ok_line option that caused